--- a/books.html
+++ b/books.html
@@ -19,24 +19,24 @@
         }
         .header {
             background: #ffffff;
-            padding: 15px 20px;
+            padding: 20px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            margin: 10px;
+            margin: 20px;
             border-radius: 12px;
             position: sticky;
             top: 0;
             z-index: 1000;
         }
         .header .logo {
-            font-size: 1.5em;
+            font-size: 1.8em;
             font-weight: 700;
             color: #1a73e8;
         }
         .header nav a {
-            margin-left: 20px;
+            margin-left: 30px;
             text-decoration: none;
             color: #202124;
             font-weight: 600;
@@ -58,7 +58,7 @@
             display: none;
             position: absolute;
             background: #ffffff;
-            min-width: 180px;
+            min-width: 200px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             z-index: 1000;
@@ -69,7 +69,7 @@
         }
         .dropdown-content a {
             display: block;
-            padding: 10px 14px;
+            padding: 12px 16px;
             text-decoration: none;
             color: #202124;
             font-weight: 600;
@@ -83,24 +83,24 @@
         }
         .books-section {
             max-width: 1200px;
-            margin: 15px auto;
-            padding: 15px;
+            margin: 20px auto;
+            padding: 20px;
             background: #f8f9fa;
-            border-radius: 12px;
+            border-radius: 16px;
             animation: fadeIn 1s ease-in-out;
         }
         .books-section h2 {
             text-align: center;
-            font-size: 1.8em;
+            font-size: 2em;
             font-weight: 700;
             color: #1a73e8;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
         .book-card {
             background: #ffffff;
-            padding: 15px;
-            margin: 10px 5px;
-            border-radius: 12px;
+            padding: 25px;
+            margin: 15px 0;
+            border-radius: 16px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             border: 2px solid transparent;
@@ -112,46 +112,46 @@
             border-color: #fbbc05;
         }
         .book-card h3 {
-            font-size: 1.4em;
+            font-size: 1.7em;
             font-weight: 600;
-            margin: 0 0 10px 0;
+            margin: 0 0 15px 0;
             color: #202124;
             display: flex;
             align-items: center;
             cursor: pointer;
         }
         .book-card h3 .toggle-icon {
-            margin-right: 8px;
-            font-size: 1em;
+            margin-right: 10px;
+            font-size: 1.2em;
         }
         .book-card h3 img.small-cover {
-            width: 18px;
+            width: 20px;
             height: auto;
-            margin-right: 8px;
+            margin-right: 10px;
             object-fit: cover;
             border-radius: 4px;
         }
         .book-details {
             display: none;
-            margin-top: 10px;
+            margin-top: 15px;
             flex-direction: column;
             align-items: center;
-            gap: 10px;
-            padding: 10px 0;
+            gap: 15px;
+            padding: 15px 0;
         }
         .book-details.active {
             display: flex;
         }
         .book-details img {
             width: 100%;
-            max-width: 200px;
+            max-width: 300px;
             height: auto;
             object-fit: contain;
             border-radius: 8px;
         }
         .book-details p {
             color: #5f6368;
-            font-size: 1em;
+            font-size: 1.1em;
             margin: 0;
             text-align: center;
         }
@@ -160,10 +160,10 @@
             background: linear-gradient(90deg, #1a73e8, #34a853);
             color: #ffffff;
             border: none;
-            padding: 8px 16px;
+            padding: 10px 20px;
             border-radius: 50px;
             cursor: pointer;
-            font-size: 0.9em;
+            font-size: 1em;
             font-weight: 600;
             text-decoration: none;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -177,11 +177,11 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 8px;
-            margin-bottom: 15px;
+            gap: 10px;
+            margin-bottom: 20px;
         }
         .filter-bar select, .filter-bar input {
-            padding: 8px;
+            padding: 10px;
             font-size: 1em;
             border: 1px solid #dfe1e5;
             border-radius: 24px;
@@ -189,7 +189,7 @@
             outline: none;
             transition: box-shadow 0.3s ease, border-color 0.3s ease;
             width: 100%;
-            max-width: 250px;
+            max-width: 300px;
         }
         .filter-bar select:focus, .filter-bar input:focus {
             box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
@@ -204,10 +204,12 @@
         }
         footer {
             text-align: center;
-            padding: 20px;
+            padding: 25px;
             background: #202124;
             color: #ffffff;
-            margin-top: 30px;
+            margin-top: 40px;
+            font-size: 1em;
+            font-weight: 400;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -216,59 +218,41 @@
         @media (max-width: 768px) {
             .header {
                 flex-direction: column;
-                gap: 10px;
-                padding: 10px 15px;
-                margin: 5px;
+                gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
             }
             .header .logo {
-                font-size: 1.3em;
+                font-size: 1.8em;
             }
             .header nav {
-                margin-top: 8px;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
+                margin-top: 10px;
             }
             .header nav a {
-                margin: 5px 10px;
-                font-size: 0.9em;
+                margin-left: 15px;
+                margin-right: 15px;
             }
             .dropdown-content {
-                min-width: 140px;
-            }
-            .dropdown-content a {
-                padding: 8px 12px;
-                font-size: 0.9em;
+                min-width: 150px;
             }
             .books-section {
                 margin: 10px;
-                padding: 10px;
+                padding: 15px;
             }
             .books-section h2 {
-                font-size: 1.5em;
+                font-size: 1.6em;
             }
             .book-card {
-                width: calc(100% - 20px);
+                width: 90%;
                 max-width: 350px;
                 margin: 10px auto;
-                padding: 10px;
-                border-radius: 10px;
-            }
-            .book-card h3 {
-                font-size: 1.2em;
-            }
-            .book-card h3 img.small-cover {
-                width: 16px;
+                padding: 20px;
             }
             .book-details img {
-                max-width: 180px;
+                max-width: 200px;
             }
-            .book-details p {
-                font-size: 0.9em;
-            }
-            .book-details a.download-button {
-                padding: 7px 14px;
-                font-size: 0.85em;
+            .book-card h3 img.small-cover {
+                width: 15px;
             }
             .filter-bar {
                 flex-direction: column;
@@ -278,48 +262,53 @@
             .filter-bar select, .filter-bar input {
                 width: 90%;
                 max-width: 280px;
-                padding: 7px;
-                font-size: 0.9em;
+                padding: 8px;
+            }
+            footer {
+                padding: 25px;
+                font-size: 1em;
+                font-weight: 400;
             }
         }
         @media (max-width: 480px) {
-            .header .logo {
-                font-size: 1.2em;
-            }
-            .header nav a {
-                font-size: 0.85em;
-                margin: 5px 8px;
-            }
-            .dropdown-content {
-                min-width: 120px;
-            }
             .books-section {
                 margin: 5px;
-                padding: 8px;
+                padding: 10px;
             }
             .books-section h2 {
-                font-size: 1.3em;
+                font-size: 1.4em;
             }
             .book-card {
-                width: calc(100% - 10px);
+                width: 95%;
                 max-width: 300px;
-                padding: 8px;
-            }
-            .book-card h3 {
-                font-size: 1.1em;
-            }
-            .book-card h3 img.small-cover {
-                width: 14px;
+                margin: 10px auto;
+                padding: 15px;
             }
             .book-details img {
                 max-width: 150px;
             }
+            .book-card h3 {
+                font-size: 1.4em;
+            }
+            .book-card h3 img.small-cover {
+                width: 12px;
+            }
             .book-details p {
-                font-size: 0.85em;
+                font-size: 0.9em;
+            }
+            .book-details a.download-button {
+                padding: 8px 16px;
+                font-size: 0.9em;
             }
             .filter-bar select, .filter-bar input {
                 width: 95%;
                 max-width: 260px;
+                padding: 7px;
+            }
+            footer {
+                padding: 25px;
+                font-size: 1em;
+                font-weight: 400;
             }
         }
     </style>
@@ -336,7 +325,7 @@
                 <div class="dropdown-content">
                     <a href="books.html" class="active">Книги и PDF</a>
                     <a href="external-links.html">Внешние ссылки на задачи</a>
-                    <a href="handbook.html">Olympiad Handbook</a>
+                    <a href="handbook.html">Олимпиадный гайд</a>
                 </div>
             </div>
             <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
@@ -599,7 +588,6 @@
                 })
                 .catch(error => {
                     console.error('Download failed:', error);
-                    // Fallback to opening the URL if download fails
                     window.open(url, '_blank');
                 });
         }
