--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atomaroid — Олимпиадная физика для школьников Азербайджана</title>
-
     <meta name="description" content="Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане: задачи, решения, статьи и поддержка для победителей.">
     <meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане, Айлин, Айлин Музаффарли, Aylin, Aylin Muzaffarli">
-
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -19,10 +17,8 @@
   "sameAs": []
 }
     </script>
-
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
         body {
@@ -296,6 +292,8 @@
             background: #202124;
             color: #ffffff;
             margin-top: 40px;
+            font-size: 1em;
+            font-weight: 400;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -306,7 +304,83 @@
             50% { transform: scale(1.02); }
             100% { transform: scale(1); }
         }
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+                gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
+            }
+            .header .logo {
+                font-size: 1.8em;
+            }
+            .header nav {
+                margin-top: 10px;
+            }
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            .dropdown-content {
+                min-width: 150px;
+            }
+            .main-banner {
+                margin: 10px;
+                padding: 15px;
+            }
+            .main-banner h2 {
+                font-size: 1.6em;
+            }
+            .popular-tasks-section {
+                margin: 10px;
+                padding: 15px;
+            }
+            .popular-tasks-section h2 {
+                font-size: 1.6em;
+            }
+            .task-card {
+                width: 90%;
+                max-width: 350px;
+                margin: 10px auto;
+                padding: 20px;
+            }
+            .articles-section {
+                margin: 10px;
+                padding: 15px;
+            }
+            .articles-section h2 {
+                font-size: 1.6em;
+            }
+            .articles-card {
+                width: 90%;
+                max-width: 350px;
+                margin: 10px auto;
+                padding: 20px;
+            }
+            .contact-section {
+                margin: 10px;
+                padding: 15px;
+            }
+            .contact-section h2 {
+                font-size: 1.6em;
+            }
+            .contact-card {
+                width: 90%;
+                max-width: 350px;
+                margin: 10px auto;
+                padding: 20px;
+            }
+            footer {
+                padding: 25px;
+                font-size: 1em;
+                font-weight: 400;
+            }
+        }
         @media (max-width: 480px) {
+            .main-banner {
+                margin: 5px;
+                padding: 10px;
+            }
             .main-banner h1 {
                 font-size: 2.2em;
                 line-height: 1.3;
@@ -319,21 +393,62 @@
             .banner-text {
                 max-width: 90%;
             }
-        }
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                gap: 15px;
+            .popular-tasks-section {
+                margin: 5px;
+                padding: 10px;
             }
-            .header nav {
-                margin-top: 10px;
+            .popular-tasks-section h2 {
+                font-size: 1.4em;
             }
-            .header nav a {
-                margin-left: 15px;
-                margin-right: 15px;
+            .task-card {
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
             }
-            .dropdown-content {
-                min-width: 150px;
+            .task-card h3 {
+                font-size: 1.4em;
+            }
+            .articles-section {
+                margin: 5px;
+                padding: 10px;
+            }
+            .articles-section h2 {
+                font-size: 1.4em;
+            }
+            .articles-card {
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
+            }
+            .articles-card p {
+                font-size: 0.9em;
+            }
+            .contact-section {
+                margin: 5px;
+                padding: 10px;
+            }
+            .contact-section h2 {
+                font-size: 1.4em;
+            }
+            .contact-card {
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
+            }
+            .contact-card p {
+                font-size: 0.9em;
+            }
+            .contact-card .contact-button {
+                padding: 8px 16px;
+                font-size: 0.9em;
+            }
+            footer {
+                padding: 25px;
+                font-size: 1em;
+                font-weight: 400;
             }
         }
     </style>
