--- a/external-links.html
+++ b/external-links.html
@@ -184,6 +184,11 @@
             .header {
                 flex-direction: column;
                 gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
+            }
+            .header .logo {
+                font-size: 1.8em;
             }
             .header nav {
                 margin-top: 10px;
@@ -210,6 +215,46 @@
                 width: 100%;
                 max-width: 400px;
                 margin: 15px auto;
+            }
+        }
+        @media (max-width: 480px) {
+            .header {
+                flex-direction: column;
+                gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
+            }
+            .header .logo {
+                font-size: 1.8em;
+            }
+            .header nav {
+                margin-top: 10px;
+            }
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            .dropdown-content {
+                min-width: 150px;
+            }
+            .links-section h2 {
+                font-size: 1.4em;
+            }
+            .filter-bar select, .filter-bar input {
+                width: 95%;
+                max-width: 300px;
+            }
+            .links-card {
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
+            }
+            .links-card h3 {
+                font-size: 1.4em;
+            }
+            .links-card p {
+                font-size: 0.9em;
             }
         }
         @media (min-width: 769px) {
