--- a/handbook.html
+++ b/handbook.html
@@ -223,18 +223,17 @@
                 margin: 10px;
             }
             .header .logo {
-                font-size: 1.5em;
+                font-size: 1.8em;
             }
             .header nav {
                 margin-top: 10px;
             }
             .header nav a {
-                margin-left: 10px;
-                margin-right: 10px;
-                font-size: 0.9em;
+                margin-left: 15px;
+                margin-right: 15px;
             }
             .dropdown-content {
-                min-width: 120px;
+                min-width: 150px;
             }
             .handbook-section {
                 margin: 10px;
@@ -259,19 +258,23 @@
 
         @media (max-width: 480px) {
             .header {
-                padding: 10px 15px;
-                margin: 5px;
+                flex-direction: column;
+                gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
             }
             .header .logo {
-                font-size: 1.3em;
+                font-size: 1.8em;
+            }
+            .header nav {
+                margin-top: 10px;
             }
             .header nav a {
-                margin-left: 8px;
-                margin-right: 8px;
-                font-size: 0.85em;
+                margin-left: 15px;
+                margin-right: 15px;
             }
             .dropdown-content {
-                min-width: 100px;
+                min-width: 150px;
             }
             .handbook-section {
                 margin: 5px;
