--- a/info.html
+++ b/info.html
@@ -231,6 +231,11 @@
             .header {
                 flex-direction: column;
                 gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
+            }
+            .header .logo {
+                font-size: 1.8em;
             }
             .header nav {
                 margin-top: 10px;
@@ -247,6 +252,47 @@
             }
             .info-card, .contact-card {
                 margin: 10px;
+            }
+        }
+        @media (max-width: 480px) {
+            .header {
+                flex-direction: column;
+                gap: 15px;
+                padding: 15px 20px;
+                margin: 10px;
+            }
+            .header .logo {
+                font-size: 1.8em;
+            }
+            .header nav {
+                margin-top: 10px;
+            }
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            .dropdown-content {
+                min-width: 150px;
+            }
+            .info-section h1, .contact-section h2 {
+                font-size: 1.6em;
+            }
+            .info-card, .contact-card {
+                margin: 5px;
+                padding: 15px;
+            }
+            .info-card h2 {
+                font-size: 1.4em;
+            }
+            .info-card p, .contact-card p {
+                font-size: 0.9em;
+            }
+            .info-card ul li {
+                font-size: 0.9em;
+            }
+            .contact-card .contact-button {
+                padding: 8px 16px;
+                font-size: 0.9em;
             }
         }
     </style>
@@ -331,7 +377,7 @@
             <h2>🔚 Заключение</h2>
             <p>Физика — это не набор формул, а язык Вселенной. И каждая задача — это диалог с реальностью.</p>
             <p>Если ребёнок в год способен с удивлением наблюдать за падающий лист, то и вы способны с тем же восхищением искать ответы в законах природы.</p>
-            <p class="quote">"Великая цель науки — не ответы, а честные вопросы. Побеждает не тот, кто всё渴望 понял, а тот, кто не перестаёт спрашивать."</p>
+            <p class="quote">"Великая цель науки — не ответы, а честные вопросы. Побеждает не тот, кто всё понял, а тот, кто не перестаёт спрашивать."</p>
             <p>Этот сайт — приглашение к интеллектуальному усилию. Не ради медалей, а ради понимания. Не ради оценки, а ради роста.</p>
             <p>Начните сегодня. Думайте самостоятельно. Ошибайтесь. Преодолевайте. И пусть физика станет не просто предметом, а опорой, с которой можно идти к любым вершинам.</p>
         </div>
