--- a/tasks.html
+++ b/tasks.html
@@ -285,7 +285,7 @@
             <select id="competition-filter">
                 <option value="">Любое соревнование</option>
                 <option value="RFO">Республиканская предметная олимпиада</option>
-                <option value="RGM">Республиканский предметный конкурс</option>
+                <option value="RPC">Республиканский предметный конкурс</option>
             </select>
             <select id="year-filter">
                 <option value="">Любой год</option>
@@ -629,3 +629,4 @@
     </script>
 </body>
 </html>
+
