--- a/articles.html
+++ b/articles.html
@@ -240,10 +240,10 @@
             <p>Новая статья выйдет скоро — следите за обновлениями!</p>
         </div>
         <div class="articles-card">
-            <h3><a href="articles1.html">Почему вопрос «почему?» — ключ к истинному знанию</a></h3>
+          <h3><a href="articles1.html" target="_self">Почему вопрос «почему?» — ключ к истинному знанию</a></h3>
         </div>
         <div class="articles-card">
-            <h3><a href="articles2.html">Я думала, что решаю задачи. Оказалось — они решают меня.</a></h3>
+           <h3><a href="articles2.html" target="_self">Я думала, что решаю задачи. Оказалось — они решают меня.</a></h3>
         </div>
     </div>
     <footer>
