--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                     <a href="handbook.html">Олимпиадный гайд</a>
                 </div>
             </div>
-            <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
+            <a href="articles.html" class="nav-link">Статьи</a>
             <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
     </div>
@@ -499,7 +499,7 @@
     <div id="articles" class="articles-section">
         <h2>Статьи</h2>
         <div class="articles-card">
-            <p>Ознакомьтесь с нашими статьями по олимпиадной физике, доступными на странице <a href="articles.html" target="_blank">Статьи</a>.</p>
+            <p>Ознакомьтесь с нашими статьями по олимпиадной физике, доступными на странице <a href="articles.html">Статьи</a>.</p>
         </div>
     </div>
     <div id="contact" class="contact-section">
