--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     <div id="articles" class="articles-section">
         <h2>Статьи</h2>
         <div class="articles-card">
-            <p>Ознакомьтесь с нашими статьями по олимпиадной физике, доступными на странице <a href="articles.html">Статьи</a>.</p>
+            <p>Ознакомьтесь с нашими статьями по олимпиадной физике, доступными на странице <a href="articles.html" target="_blank">Статьи</a>.</p>
         </div>
     </div>
     <div id="contact" class="contact-section">
