--- a/tasks.html
+++ b/tasks.html
@@ -207,52 +207,49 @@
                 max-width: 360px;
             }
         }
-        @media (max-width: 480px) {
-            .header {
-                margin: 5px;
-                padding: 10px;
-            }
-            .header .logo {
-                font-size: 1.6em;
-            }
-            .header nav a {
-                margin-left: 10px;
-                margin-right: 10px;
-                font-size: 0.9em;
-            }
-            .dropdown-content {
-                min-width: 120px;
-            }
-            .dropdown-content a {
-                padding: 10px 12px;
-                font-size: 0.9em;
-            }
-            .tasks-section {
-                margin: 5px;
-                padding: 10px;
-            }
-            .tasks-section h1 {
-                font-size: 2em;
-            }
-            .filter-bar select, .filter-bar input {
-                width: 90%;
-                max-width: 280px;
-                font-size: 0.9em;
-            }
-            .task-card {
-                width: 95%;
-                max-width: 300px;
-                padding: 15px;
-            }
-            .task-card h3 {
-                font-size: 1.4em;
-            }
-            footer {
-                padding: 25px;
-                font-size: 1em;
-                font-weight: 400;
-            }
-        }
+       @media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px 20px;
+        margin: 10px;
+    }
+    .header .logo {
+        font-size: 1.8em;
+    }
+    .header nav {
+        margin-top: 10px;
+    }
+    .header nav a {
+        margin-left: 15px;
+        margin-right: 15px;
+        font-size: 1.1em; /* Increased for larger text */
+    }
+    .dropdown-content {
+        min-width: 160px; /* Slightly larger dropdown */
+    }
+}
+@media (max-width: 480px) {
+    .header {
+        margin: 5px;
+        padding: 10px;
+    }
+    .header .logo {
+        font-size: 1.7em; /* Increased from 1.6em */
+    }
+    .header nav a {
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 1em; /* Increased from 0.9em */
+    }
+    .dropdown-content {
+        min-width: 130px; /* Slightly larger dropdown */
+    }
+    .dropdown-content a {
+        padding: 12px 14px; /* Increased padding */
+        font-size: 1em; /* Increased from 0.9em */
+    }
+}
         @media (min-width: 769px) {
             .task-card {
                 width: calc((100% - 40px) / 3);
