--- a/tasks.html
+++ b/tasks.html
@@ -179,7 +179,7 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        @media (max-width: 768px) {
+          @media (max-width: 768px) {
             .header {
                 flex-direction: column;
                 gap: 15px;
@@ -191,67 +191,59 @@
             }
             .header nav {
                 margin-top: 10px;
-                display: flex;
-                justify-content: center;
-                flex-wrap: wrap;
             }
             .header nav a {
-                margin: 5px 15px;
+                margin-left: 15px;
+                margin-right: 15px;
             }
             .dropdown-content {
                 min-width: 150px;
             }
-            .filter-bar {
-                flex-direction: column;
-                align-items: center;
-            }
-            .filter-bar select, .filter-bar input {
-                width: 80%;
-                max-width: 300px;
-            }
-            .task-card {
-                width: 100%;
-                max-width: 360px;
-            }
-        }
-        @media (max-width: 480px) {
-            .header {
-                margin: 5px;
-                padding: 10px;
-            }
-            .header .logo {
-                font-size: 1.6em;
-            }
-            .header nav a {
-                margin: 5px 10px;
-                font-size: 0.9em;
-            }
-            .dropdown-content {
-                min-width: 120px;
-            }
-            .dropdown-content a {
-                padding: 10px 12px;
-                font-size: 0.9em;
-            }
-            .tasks-section {
-                margin: 5px;
-                padding: 10px;
-            }
-            .tasks-section h1 {
-                font-size: 2em;
-            }
-            .filter-bar select, .filter-bar input {
-                width: 90%;
-                max-width: 280px;
-                font-size: 0.9em;
-            }
-            .task-card {
-                width: 95%;
-                max-width: 300px;
+            .main-banner {
+                margin: 10px;
                 padding: 15px;
             }
-            .task-card h3 {
-                font-size: 1.4em;
+            .main-banner h2 {
+                font-size: 1.6em;
+            }
+            .popular-tasks-section {
+                margin: 10px;
+                padding: 15px;
+            }
+            .popular-tasks-section h2 {
+                font-size: 1.6em;
+            }
+            .task-card {
+                width: 90%;
+                max-width: 350px;
+                margin: 10px auto;
+                padding: 20px;
+            }
+            .articles-section {
+                margin: 10px;
+                padding: 15px;
+            }
+            .articles-section h2 {
+                font-size: 1.6em;
+            }
+            .articles-card {
+                width: 90%;
+                max-width: 350px;
+                margin: 10px auto;
+                padding: 20px;
+            }
+            .contact-section {
+                margin: 10px;
+                padding: 15px;
+            }
+            .contact-section h2 {
+                font-size: 1.6em;
+            }
+            .contact-card {
+                width: 90%;
+                max-width: 350px;
+                margin: 10px auto;
+                padding: 20px;
             }
             footer {
                 padding: 25px;
@@ -259,9 +251,79 @@
                 font-weight: 400;
             }
         }
-        @media (min-width: 769px) {
+        @media (max-width: 480px) {
+            .main-banner {
+                margin: 5px;
+                padding: 10px;
+            }
+            .main-banner h1 {
+                font-size: 2.2em;
+                line-height: 1.3;
+                word-break: normal;
+                white-space: normal;
+            }
+            .main-banner p {
+                font-size: 1em;
+            }
+            .banner-text {
+                max-width: 90%;
+            }
+            .popular-tasks-section {
+                margin: 5px;
+                padding: 10px;
+            }
+            .popular-tasks-section h2 {
+                font-size: 1.4em;
+            }
             .task-card {
-                width: calc((100% - 40px) / 3);
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
+            }
+            .task-card h3 {
+                font-size: 1.4em;
+            }
+            .articles-section {
+                margin: 5px;
+                padding: 10px;
+            }
+            .articles-section h2 {
+                font-size: 1.4em;
+            }
+            .articles-card {
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
+            }
+            .articles-card p {
+                font-size: 0.9em;
+            }
+            .contact-section {
+                margin: 5px;
+                padding: 10px;
+            }
+            .contact-section h2 {
+                font-size: 1.4em;
+            }
+            .contact-card {
+                width: 95%;
+                max-width: 300px;
+                margin: 10px auto;
+                padding: 15px;
+            }
+            .contact-card p {
+                font-size: 0.9em;
+            }
+            .contact-card .contact-button {
+                padding: 8px 16px;
+                font-size: 0.9em;
+            }
+            footer {
+                padding: 25px;
+                font-size: 1em;
+                font-weight: 400;
             }
         }
     </style>
@@ -633,3 +695,4 @@
     </script>
 </body>
 </html>
+
