--- a/tasks.html
+++ b/tasks.html
@@ -35,7 +35,7 @@
             font-weight: 700;
             color: #1a73e8;
         }
-        .header nav {
+         .header nav {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -179,7 +179,7 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-          @media (max-width: 768px) {
+           @media (max-width: 768px) {
             .header {
                 flex-direction: column;
                 gap: 15px;
@@ -189,13 +189,21 @@
             .header .logo {
                 font-size: 1.8em;
             }
-            .header nav {
-                margin-top: 10px;
-            }
-            .header nav a {
-                margin-left: 15px;
-                margin-right: 15px;
-            }
+           .header nav {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+}
+.header nav a {
+    margin: 0;
+}
+.header nav a:nth-child(3)::after {
+    content: "";
+    flex-basis: 100%;
+    height: 0;
+}
             .dropdown-content {
                 min-width: 150px;
             }
@@ -695,4 +703,3 @@
     </script>
 </body>
 </html>
-
