--- a/info.html
+++ b/info.html
@@ -328,7 +328,7 @@
         <div class="info-card">
             <h2>🔗 Личный сайт</h2>
             <p>Вы можете ознакомиться с моими проектами, подборками задач, материалами по подготовке к олимпиадам, а также авторскими статьями на моём официальном сайте:</p>
-            <p><a href="https://www.aylinmuzaffarli.com/" target="_blank">aylinmuzaffarli.github.io</a></p>
+            <p><a href="https://www.aylinmuzaffarli.com/" target="_blank">aylinmuzaffarli.com</a></p>
             <p class="quote">"Я создаю то, чего мне самой не хватало — и делюсь с теми, кто тоже идёт этим путём."</p>
         </div>
         <div class="info-card">
@@ -434,4 +434,3 @@
     </script>
 </body>
 </html>
-
