--- a/tasks.html
+++ b/tasks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задачи - Atomaroid</title>
+    <title>Задачи</title>
     <link rel="icon" type="image/jpeg" href="icon.jpeg">
     <meta name="description" content="Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане: задачи, решения, статьи и поддержка для победителей.">
     <meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане, Айлин, Айлин Музаффарли, Aylin, Aylin Muzaffarli">
@@ -628,3 +628,4 @@
     </script>
 </body>
 </html>
+
