--- a/articles3.html
+++ b/articles3.html
@@ -9,13 +9,19 @@
     <link rel="icon" type="image/jpeg" href="https://i.imgur.com/gcLpNUp.jpeg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-        body {
-            font-family: 'Poppins', sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+        }
+        body {
+            font-family: 'Poppins', sans-serif;
             background: #ffffff;
             color: #202124;
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .header {
             background: #ffffff;
@@ -88,6 +94,7 @@
             background: #f8f9fa;
             border-radius: 16px;
             animation: fadeIn 1s ease-in-out;
+            flex: 1 0 auto;
         }
         .article-container h1 {
             text-align: center;
@@ -136,7 +143,8 @@
             padding: 25px;
             background: #202124;
             color: #ffffff;
-            margin-top: 40px;
+            width: 100%;
+            flex-shrink: 0;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
