--- a/articles3.html
+++ b/articles3.html
@@ -9,19 +9,19 @@
     <link rel="icon" type="image/jpeg" href="https://i.imgur.com/gcLpNUp.jpeg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-        html, body {
+        html {
             height: 100%;
-            margin: 0;
-            padding: 0;
         }
         body {
             font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
             background: #ffffff;
             color: #202124;
             line-height: 1.6;
+            min-height: 100%;
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
         }
         .header {
             background: #ffffff;
@@ -143,7 +143,7 @@
             padding: 25px;
             background: #202124;
             color: #ffffff;
-            width: 100%;
+            margin-top: 40px;
             flex-shrink: 0;
         }
         @keyframes fadeIn {
