--- a/books.html
+++ b/books.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -17,6 +16,9 @@
             background: #ffffff;
             color: #202124;
             line-height: 1.6;
+            min-height: 100vh; /* Ensure body takes at least full viewport height */
+            display: flex;
+            flex-direction: column;
         }
         .header {
             background: #ffffff;
@@ -89,6 +91,7 @@
             background: #f8f9fa;
             border-radius: 16px;
             animation: fadeIn 1s ease-in-out;
+            flex: 1; /* Allow books-section to take available space */
         }
         .books-section h2 {
             text-align: center;
@@ -208,9 +211,9 @@
             padding: 25px;
             background: #202124;
             color: #ffffff;
-            margin-top: 40px;
             font-size: 1em;
             font-weight: 400;
+            width: 100%;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
