--- a/external-links.html
+++ b/external-links.html
@@ -291,7 +291,7 @@
                 <option value="Azerbaijani">Азербайджанский</option>
                 <option value="International">Международный</option>
             </select>
-            <input type="text" id="title-filter" placeholder="Поиск по названию или описанию">
+            <input type="text" id="title-filter" placeholder="Поиск по названию">
         </div>
         <div class="links-list" id="links-list">
             <div class="links-card">
