--- a/books.html
+++ b/books.html
@@ -15,7 +15,7 @@
             padding: 0;
             background: #ffffff;
             color: #202124;
-            line-height: 1.6;
+            Khuynh hướng: 1.6;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -488,6 +488,18 @@
                     <a href="https://ia800608.us.archive.org/19/items/IrodovProblemsInGeneralPhysics/Irodov-Problems_in_General_Physics.pdf" class="download-button" target="_blank">Скачать</a>
                 </div>
             </div>
+            <div class="book-card">
+                <h3>
+                    <span class="toggle-icon">▼</span>
+                    <img src="https://i.imgur.com/Q4eWQDC.png" alt="Задачи Московских городских олимпиад по физике. 1986 – 2005" class="small-cover">
+                    Задачи Московских городских олимпиад по физике. 1986 – 2005
+                </h3>
+                <div class="book-details">
+                    <img src="https://i.imgur.com/Q4eWQDC.png" alt="Задачи Московских городских олимпиад по физике. 1986 – 2005">
+                    <p>Задачи Московских городских олимпиад по физике. 1986 – 2005</p>
+                    <a href="https://drive.google.com/file/d/1Yr72eHdiTtAT1w10g4v08NI-kvM-1xfE/view" class="download-button" target="_blank">Скачать</a>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
@@ -572,6 +584,13 @@
                 grade: 'Advanced',
                 language: 'Английский',
                 element: document.querySelectorAll('.book-card')[10]
+            },
+            {
+                id: 'book12',
+                title: 'Задачи Московских городских олимпиад по физике. 1986 – 2005',
+                grade: 'Advanced',
+                language: 'Русский',
+                element: document.querySelectorAll('.book-card')[11]
             }
         ];
 
